spec/.test/config/invalid/isect/aliases/factories.php
<?php

return [
    'aliases' => [
        'id' => 'alias',
    ],
    'factories' => [
        'id' => function () {},
    ],
];
